[tool.poetry]
name = "takethetools"
version = "0.1.0"
description = "A prototype for an easy to user tool and equipment lending tool for open workshops, collectives and fablabs"
authors = ["stoertebeker23 <stoerte@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-bootstrap4 = "^2.3.1"
django-bootstrap-datepicker-plus = "^3.0.5"
django-crispy-forms = "^1.11.1"
python-barcode = "^0.13.1"
Pillow = "^8.1.2"
numpy = "^1.20.1"
wget = "^3.2"
django-tables2 = "^2.3.4"
django-filter = "^2.4.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.910"
pylint = "^2.11.1"
black = "^21.9-beta.0"
pylint-django = "^2.4.4"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
ignore = "takethetools/db.sqlite3"
jobs = 0
load-plugins = ["pylint_django"]

[tool.pylint.basic]
good-names = [
    "i", # iterator
    "_", "__", "___", # unneeded variable
    "T", # generic type
    "id",
]

[tool.pylint.message_control]
disable = [
    "missing-module-docstring", 
    "missing-class-docstring", 
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "duplicate-code",
    "too-many-ancestors",
    "django-not-configured"
]
enable = ["useless-suppression"]

[tool.pylint.design]
max-attributes = 10